--- a/src/index.html
+++ b/src/index.html
@@ -14,3 +14,10 @@
   <app-root></app-root>
 </body>
 </html>
+<!doctype html>
+<html lang = "en">
+
+<body>
+  <app-root></app-root>
+</body>
+</html>
